--- a/IndexTemplate.html
+++ b/IndexTemplate.html
@@ -20,9 +20,9 @@
         {{ range $Index, $MovList := . }}
             <div class="col">
                     <div class="row" style="margin-top: 18px;margin-left:3px;">
-                            <div class=" border rounded border-info" style="background-color:white;" >
+                            <div  style="background-color:white;" >
                                 <div class="col">
-                                    <h6 style="width:150px;" ><span class="badge badge-secondary" style="font-size:12px;">{{ $MovList.Name }}</span></h6>
+                                    <h6 style="" ><span class="badge badge-secondary" style="font-size:12px;">{{ $MovList.Name }}</span></h6>
                                 </div>
                             </div>
                         </div>
